--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.14",
     "morgan": "~1.9.1"
+  },
+  "engines" : {
+    "node" : "6.14.8",
+    "npm" : "6.14.8"
   }
 }
